Fix tiny recommendation cards on IE

--- a/angular/src/app/results-page/results-page.component.scss
+++ b/angular/src/app/results-page/results-page.component.scss
@@ -1,5 +1,8 @@
 @import "~styles/mixins/font";
 
+$recommendation-cards-per-row: 4;
+$recommendation-card-margin: 24px;
+
 .results-page {
 
   width: 100%;
@@ -45,12 +48,14 @@
 
       display: flex;
       align-items: stretch;
-      justify-content: space-between;
+      justify-content: flex-start;
 
       .recommendation-card {
-        flex: 1 0 1px;
-        margin-bottom: 24px;
-        margin-right: 24px;
+        flex-basis: calc((100% - #{$recommendation-cards-per-row - 1} * #{$recommendation-card-margin} - 1px) / #{$recommendation-cards-per-row});
+        margin-bottom: $recommendation-card-margin;
+        &:not(:nth-child(#{$recommendation-cards-per-row}n)) {
+          margin-right: $recommendation-card-margin;
+        }
       }
     }
 
